--- a/css/main.css
+++ b/css/main.css
@@ -558,48 +558,12 @@ video {
   position: fixed;
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
 }
 
 .top-0 {
   top: 0px;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.top-80 {
-  top: 20rem;
-}
-
-.top-60 {
-  top: 15rem;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[6rem\] {
-  top: 6rem;
-}
-
-.top-\[10rem\] {
-  top: 10rem;
-}
-
-.top-\[15rem\] {
-  top: 15rem;
-}
-
-.top-\[18rem\] {
-  top: 18rem;
 }
 
 .top-\[17rem\] {
@@ -616,9 +580,12 @@ video {
   margin-right: auto;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .mt-10 {
@@ -629,8 +596,16 @@ video {
   margin-top: 1.25rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .flex {
@@ -645,96 +620,28 @@ video {
   display: none;
 }
 
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-8 {
-  height: 2rem;
+.h-\[32rem\] {
+  height: 32rem;
 }
 
 .h-screen {
   height: 100vh;
 }
 
-.h-64 {
-  height: 16rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-\[5rem\] {
-  height: 5rem;
-}
-
-.h-\[15rem\] {
-  height: 15rem;
-}
-
-.h-\[45rem\] {
-  height: 45rem;
-}
-
-.h-\[25rem\] {
-  height: 25rem;
-}
-
-.h-\[35rem\] {
-  height: 35rem;
-}
-
-.h-\[28rem\] {
-  height: 28rem;
-}
-
-.h-\[30rem\] {
-  height: 30rem;
-}
-
-.h-\[32rem\] {
-  height: 32rem;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.w-5\/6 {
-  width: 83.333333%;
+.w-16 {
+  width: 4rem;
 }
 
 .w-2\/3 {
   width: 66.666667%;
 }
 
-.w-2 {
-  width: 0.5rem;
+.w-5\/6 {
+  width: 83.333333%;
 }
 
-.w-16 {
-  width: 4rem;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.flex-row-reverse {
-  flex-direction: row-reverse;
+.w-full {
+  width: 100%;
 }
 
 .flex-col {
@@ -749,6 +656,14 @@ video {
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -757,22 +672,8 @@ video {
   gap: 1.25rem;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
 .gap-6 {
   gap: 1.5rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -785,13 +686,18 @@ video {
   border-radius: 0.5rem;
 }
 
-.border-2 {
-  border-width: 2px;
+.border {
+  border-width: 1px;
 }
 
 .border-Grey {
   --tw-border-opacity: 1;
   border-color: hsl(0 0% 58% / var(--tw-border-opacity, 1));
+}
+
+.border-Red {
+  --tw-border-opacity: 1;
+  border-color: hsl(4 100% 67% / var(--tw-border-opacity, 1));
 }
 
 .bg-Blue800 {
@@ -804,53 +710,20 @@ video {
   background-color: hsl(0 0% 100% / var(--tw-bg-opacity, 1));
 }
 
-.p-5 {
-  padding: 1.25rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
-}
-
-.p-8 {
-  padding: 2rem;
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-4 {
   padding: 1rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
+.p-8 {
+  padding: 2rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.p-10 {
+  padding: 2.5rem;
 }
 
 .px-6 {
@@ -863,19 +736,24 @@ video {
   padding-bottom: 4rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .font-bold {
@@ -886,19 +764,35 @@ video {
   font-weight: 500;
 }
 
+.text-Blue800 {
+  --tw-text-opacity: 1;
+  color: hsl(234 29% 20% / var(--tw-text-opacity, 1));
+}
+
+.text-Red {
+  --tw-text-opacity: 1;
+  color: hsl(4 100% 67% / var(--tw-text-opacity, 1));
+}
+
 .text-White {
   --tw-text-opacity: 1;
   color: hsl(0 0% 100% / var(--tw-text-opacity, 1));
 }
 
-.text-Grey {
-  --tw-text-opacity: 1;
-  color: hsl(0 0% 58% / var(--tw-text-opacity, 1));
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
-.text-Blue800 {
-  --tw-text-opacity: 1;
-  color: hsl(234 29% 20% / var(--tw-text-opacity, 1));
+.duration-150 {
+  transition-duration: 150ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @font-face {
@@ -921,13 +815,29 @@ video {
   font-style: normal;
 }
 
+.hover\:border-2:hover {
+  border-width: 2px;
+}
+
+.hover\:bg-Red:hover {
+  --tw-bg-opacity: 1;
+  background-color: hsl(4 100% 67% / var(--tw-bg-opacity, 1));
+}
+
+.hover\:shadow-\[0_35px_35px_rgba\(225\2c 4\2c 0\2c 0\.25\)\]:hover {
+  --tw-shadow: 0 35px 35px rgba(225,4,0,0.25);
+  --tw-shadow-colored: 0 35px 35px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 @media (min-width: 768px) {
   .md\:top-auto {
     top: auto;
-  }
-
-  .md\:m-auto {
-    margin: auto;
   }
 
   .md\:block {
@@ -942,30 +852,6 @@ video {
     display: none;
   }
 
-  .md\:h-96 {
-    height: 24rem;
-  }
-
-  .md\:h-\[\] {
-    height: ;
-  }
-
-  .md\:h-\[26rem\] {
-    height: 26rem;
-  }
-
-  .md\:h-\[25rem\] {
-    height: 25rem;
-  }
-
-  .md\:h-screen {
-    height: 100vh;
-  }
-
-  .md\:h-\[30rem\] {
-    height: 30rem;
-  }
-
   .md\:h-\[34rem\] {
     height: 34rem;
   }
@@ -974,28 +860,8 @@ video {
     height: auto;
   }
 
-  .md\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
-  .md\:w-auto {
-    width: auto;
-  }
-
-  .md\:w-\[2rem\] {
-    width: 2rem;
-  }
-
-  .md\:w-\[12rem\] {
-    width: 12rem;
-  }
-
-  .md\:w-\[36px\] {
-    width: 36px;
+  .md\:h-screen {
+    height: 100vh;
   }
 
   .md\:w-1\/3 {
@@ -1004,6 +870,10 @@ video {
 
   .md\:w-14 {
     width: 3.5rem;
+  }
+
+  .md\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .md\:flex-row-reverse {
@@ -1018,12 +888,12 @@ video {
     justify-content: center;
   }
 
-  .md\:gap-2 {
-    gap: 0.5rem;
-  }
-
   .md\:gap-1 {
     gap: 0.25rem;
+  }
+
+  .md\:gap-2 {
+    gap: 0.5rem;
   }
 
   .md\:gap-4 {
@@ -1034,21 +904,9 @@ video {
     border-radius: 0.5rem;
   }
 
-  .md\:rounded-xl {
-    border-radius: 0.75rem;
-  }
-
-  .md\:rounded-full {
-    border-radius: 9999px;
-  }
-
-  .md\:rounded-none {
-    border-radius: 0px;
-  }
-
-  .md\:rounded-l {
-    border-top-left-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
+  .md\:bg-Blue800 {
+    --tw-bg-opacity: 1;
+    background-color: hsl(234 29% 20% / var(--tw-bg-opacity, 1));
   }
 
   .md\:bg-White {
@@ -1056,33 +914,8 @@ video {
     background-color: hsl(0 0% 100% / var(--tw-bg-opacity, 1));
   }
 
-  .md\:bg-Blue800 {
-    --tw-bg-opacity: 1;
-    background-color: hsl(234 29% 20% / var(--tw-bg-opacity, 1));
-  }
-
   .md\:p-4 {
     padding: 1rem;
-  }
-
-  .md\:py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-
-  .md\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .md\:px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-  }
-
-  .md\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
   }
 
   .md\:px-10 {
@@ -1095,42 +928,11 @@ video {
     padding-bottom: 1.5rem;
   }
 
-  .md\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
-  .md\:text-\[2rem\] {
-    font-size: 2rem;
-  }
-
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
   .md\:text-\[1rem\] {
     font-size: 1rem;
   }
 
-  .md\:text-\[1\.5rem\] {
-    font-size: 1.5rem;
-  }
-
   .md\:font-bold {
     font-weight: 700;
-  }
-
-  .md\:text-\[1\.5REM\] {
-    color: 1.5REM;
-  }
-
-  .md\:text-\[1\.\] {
-    color: 1.;
   }
 }
